/*
INF Marketplace
Copyright (C) 2018  INF Marketplace LLC
Author: Jan Boon <kaetemi@no-break.space>
*/

syntax = "proto3";

package inf_common;
option csharp_namespace = "InfCommon";

import "enum_protobuf.proto";

message ConfigSubCategories {
  repeated string labels = 1;
}

message ConfigOAuthProvider { // 35
  int32 provider_id = 35;

  /// Database key
  string key = 33;

  /// Whether the OAuth provider is visible in the UI at all
  bool visible = 1;
  
  /// Whether to allow new connections to this provider
  bool can_connect = 19;
  
  /// Whether the OAuth provider can always be used to authenticate
  bool can_always_authenticate = 2;
  
  /// Whether this social provider can be shown in the user profile at all
  bool show_in_profile = 20;
  
  /// Points to itself if this provider is a deliverables channel
  /// Points to another provider (root provider) if another provider is used
  int32 deliverables_channel = 34;
  /// TODO: Reverse denormalized deliverables_platforms for fast lookup
  
  /// Visual name
  string label = 3; // Display name
  int32 sorting = 32;
  
  /// Color references
  int32 foreground_color = 26;
  int32 background_color = 27;
  /// Colored images
  int32 foreground_image_id = 28; // Id within icon config content
  int32 background_image_id = 29;
  bytes foreground_image = 36; // Set after loading by client
  bytes background_image = 37; // Set after loading by client
  /// Flat silhouette images
  int32 monochrome_foreground_image_id = 30;
  int32 monochrome_background_image_id = 31;
  bytes monochrome_foreground_image = 38; // Set after loading by client
  bytes monochrome_background_image = 39; // Set after loading by client
  /// FontAwesome glyph
  int32 font_awesome_brand = 14;
  
  /// Keywords used by Elasticsearch
  repeated string keywords = 25;
  
  /// OAuth mechanism
  OAuthMechanism mechanism = 15;
  
  /// API endpoints of the OAuth provider
  string host = 4;
  
  /// Url that will be used to detect login success by the app
  string callbackUrl = 9;
  
  /// API endpoints for Twitter-like OAuth
  string request_token_url = 5; // If request token is not set, the alternate mechanism is used
  string authenticate_url = 6;
  string access_token_url = 16;
  
  /// Generated by the OAuth provider, Twitter-like
  string consumer_key = 10;
  string consumer_secret = 11;
  bool consumer_key_exposed = 22;
  bool consumer_secret_exposed = 23;
  
  /// API endpoints for Spotify-like OAuth
  string auth_url = 7;
  string auth_query = 8;
  
  /// From OAuth provider, Spotify-like
  string client_id = 12;
  string client_secret = 17;
  bool client_id_exposed = 21;
  
  /// Whitelisted hosts during authentication
  repeated string whitelist_hosts = 18;
  
}

message ConfigContentFormat {
  int32 format_id = 12;
  
  /// Visual specification
  string label = 2; // Display name
  int32 sorting = 3;
  
  /// Color references
  int32 foreground_color = 6;
  int32 background_color = 7;
  /// Colored images
  int32 foreground_image_id = 8; // Id within image config content
  int32 background_image_id = 9;
  bytes foreground_image = 14; // Set after loading by client
  bytes background_image = 15; // Set after loading by client
  /// Flat silhouette images
  int32 monochrome_foreground_image_id = 10;
  int32 monochrome_background_image_id = 11;
  bytes monochrome_foreground_image = 16; // Set after loading by client
  bytes monochrome_background_image = 17; // Set after loading by client
  /// FontAwesome glyph
  int32 font_awesome_icon = 4;
  
  /// Keywords used by Elasticsearch
  repeated string keywords = 1;
  
}

message ConfigCategory {
  int32 category_id = 13;
  
  int32 parent_id = 5;
  int32 sorting = 3;
  repeated int32 child_ids = 12; // (Denormalized) For faster lookup and listing
  
  /// Visual specification
  string label = 2; // Display name
  
  /// Color references
  int32 foreground_color = 6;
  int32 background_color = 7;
  /// Colored images
  int32 foreground_image_id = 8; // Id within image config content
  int32 background_image_id = 9;
  bytes foreground_image = 14; // Set after loading by client
  bytes background_image = 15; // Set after loading by client
  /// Flat silhouette images
  int32 monochrome_foreground_image_id = 10;
  int32 monochrome_background_image_id = 11;
  bytes monochrome_foreground_image = 16; // Set after loading by client
  bytes monochrome_background_image = 17; // Set after loading by client
  /// FontAwesome glyph
  int32 font_awesome_icon = 4;
  
  /// Keywords used by Elasticsearch
  repeated string keywords = 1;
  
}

message ConfigServices { // 42
  // INF
  string domain = 24;
  repeated string end_points = 8;
  string service = 33;
  string config_url = 9;
  string terms_of_service_url = 10;
  string privacy_policy_url = 11;
  string connection_failed_url = 29;
  bytes salt = 35;
  
  // DigitalOcean Spaces
  string spaces_region = 4;
  string spaces_key = 5;
  string spaces_secret = 6;
  string spaces_bucket = 7;
  
  // Account Database (MariaDB / MySQL)
  string account_db_host = 14;
  int32 account_db_port = 15;
  string account_db_user = 16;
  string account_db_password = 17;
  string account_db_database = 18;
  
  // Proposal Database (MariaDB / MySQL)
  string proposal_db_host = 43;
  int32 proposal_db_port = 44;
  string proposal_db_user = 45;
  string proposal_db_password = 46;
  string proposal_db_database = 47;
  
  // Elasticsearch
  string elasticsearch_api = 36;
  string elasticsearch_basic_auth = 37;
  
  // OneSignal (Cloud Notifications)
  string one_signal_app_id = 38;
  string one_signal_api_key = 39;
  string one_signal_api = 40;
  
  // Firebase (Cloud Notifications)
  string firebaseServerKey = 25;
  string firebaseSenderId = 26;
  string firebaseLegacyApi = 27;
  string firebaseLegacyServerKey = 28;
  
  // MapBox
  string mapboxApi = 1;
  string mapboxUrlTemplateDark = 2;
  string mapboxUrlTemplateLight = 30;
  string mapboxToken = 3;
  
  // Image Url Templates (Cloudinary / ImageKit)
  string galleryUrl = 19;
  string galleryThumbnailUrl = 20;
  string galleryThumbnailBlurredUrl = 31;
  string galleryCoverUrl = 21;
  string galleryCoverBlurredUrl = 32;
  string galleryPictureUrl = 41;
  string galleryPictureBlurredUrl = 42;
  
  // IPStack (FreeGeoIP)
  string ipstackApi = 13;
  string ipstackKey = 12;
  
  // Freshdesk (Support)
  string freshdeskApi = 22;
  string freshdeskKey = 23;
  
}

message ConfigFeatureSwitches {
  // Data
  bool createProposal = 1;
  
  // Account
  bool createSession = 2;
  bool createAccount = 3;
  bool removeAccount = 4;
  bool removeSession = 5;
  bool connectSocialMedia = 6;
  bool removeSocialMedia = 7;
  bool updateProfile = 8;
  
  // Offer
  bool createOffer = 9;
  bool updateOffer = 10;
  bool closeOffer = 11;
  bool archiveOffer = 12;
  
  // Proposal
  bool sendChat = 13;
  bool makeDeal = 14;
  bool reportProposal = 15;
  bool disputeDeal = 16;
  
  // Gallery
  bool uploadImage = 17;
  bool makeImagePublic= 18;
  bool listImages = 19;

}

message ConfigAsset {
  string name = 1;
  bytes data = 2;
  
  bool svg = 3;
  
}

message ConfigContent {
  repeated string welcome_image_urls = 1;
  
}

message ConfigData {
  /// If this goes up in a config, the client must be updated
  int32 client_version = 1;
  
  /// Timestamp when the config was built. Unix epoch UTC milliseconds
  int64 timestamp = 5;
  
  /// Localization
  string region = 8;
  string language = 9;
  
  /// Configuration data
  ConfigServices services = 6;
  ConfigFeatureSwitches featureSwitches = 15;
  
  repeated ConfigAsset assets = 14;
  ConfigContent content = 7;
  
  repeated ConfigOAuthProvider oauth_providers = 11;
  repeated ConfigContentFormat content_formats = 12;
  repeated ConfigCategory categories = 13;
  
}

/* end of file */
